# money-manager-backend

./: .env  Cargo.toml  LICENSE  docker-compose.yml
.sqlx/: query-fc786cc3d8e9fec769739afc507cccb9368ee9bfdc7203030e5c77400f170522.json
cfg/: default.toml
migrations/: 20231220183724_create-user.up.sql
migrations/2023-12-13-194902_create_user/: up.sql
src/: main.rs  schema.rs
src/adapters/db/: mod.rs
src/adapters/db/user/: mod.rs  models.rs
src/application/: mod.rs
src/application/dtos/: mod.rs  user.rs
src/application/repositories/: mod.rs  user_repo.rs
src/application/services/: mod.rs  user_service.rs
src/application/user/: create_user.rs  errors.rs  mod.rs  repository.rs  routes.rs  service.rs
src/application/user/dto/: mod.rs
src/domain/: mod.rs
src/domain/entity/user/: mod.rs
src/domain/value_object/: email.rs  id.rs  mod.rs  password.rs  user_name.rs
src/infrastructure/: database.rs  mod.rs  tracing.rs
src/infrastructure/api/routes/: error.rs  mod.rs  user_routes.rs
src/infrastructure/config/: mod.rs  settings.rs
src/infrastructure/middlewares/auth/: mod.rs  models.rs
src/infrastructure/repositories/: mod.rs  user_repo_impl.rs
src/infrastructure/repositories/dao/: user_dao.rs
src/infrastructure/utils/: mod.rs
