[package]
name = "money-manager-backend"
version = "0.1.0"
edition = "2021"
author = "Mykhailo Maidan"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7"
diesel = { version = "2.1.0", features = ["postgres","r2d2"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.193", features = ["derive","serde_derive"] }
uuid = "1.6.1"

