[package]
name = "money-manager-backend"
version = "0.1.0"
edition = "2021"
author = "Mykhailo Maidan"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.193", features = ["derive","serde_derive"] }
uuid = { version = "1.6.1", features = ["v7"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid"] }
async-trait = "0.1.75"
thiserror = "1.0.51"