[package]
name = "money-manager-backend"
version = "0.1.0"
edition = "2021"
author = "Mykhailo Maidan"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.193", features = ["derive","serde_derive"] }
serde_json = "1.0.116"
uuid = { version = "1.6.1", features = ["v7"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid"] }
async-trait = "0.1.75"
thiserror = "1.0.51"
argon2 = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors"] }
config = "0.14.0"
clap = { version = "4.5.3", features = ["derive"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
time = "0.3.36"